@@ -1,3 +1,7 @@
+2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thinp/thinp.c, src/thrend/thrend.c: Add missing <string.h>.
+
 2006-05-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.in, src/Makefile.am: Add check and condition for Win32
@@ -825,13 +829,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.80 2006-05-04 10:14:26 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.81 2006-07-03 04:43:56 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.80 2006-05-04 10:14:26 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.81 2006-07-03 04:43:56 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
